# Firmware2_AP

./: .gitignore
src/aerobot_gz_sim/: package.xml  setup.cfg  setup.py
src/aerobot_gz_sim/launch/: aerobot_first_test_ap.launch.py  aerobot_first_test_mavros_ap.launch.py  aerobot_first_test_mavros_without_car_ap.launch.py  aerobot_first_test_without_car_ap.launch.py  aerobot_second_test_ap.launch.py  aerobot_second_test_mavros_ap.launch.py  aerobot_third_test_ap.launch.py  aerobot_third_test_mavros_ap.launch.py
src/aerobot_gz_sim/models/10qr/: model.sdf
src/aerobot_gz_sim/models/10qr_without_car/: model.config  model.sdf
src/aerobot_gz_sim/models/11qr/: model.config  model.sdf
src/aerobot_gz_sim/models/11qr_without_car/: model.sdf
src/aerobot_gz_sim/models/12qr/: model.config  model.sdf
src/aerobot_gz_sim/models/12qr_without_car/: model.sdf
src/aerobot_gz_sim/models/1cube/: model.sdf
src/aerobot_gz_sim/models/1cube_blue/: model.sdf
src/aerobot_gz_sim/models/1cube_green/: model.config  model.sdf
src/aerobot_gz_sim/models/1cube_red/: model.sdf
src/aerobot_gz_sim/models/1cube_yellow/: model.sdf
src/aerobot_gz_sim/models/1qr/: model.config  model.sdf
src/aerobot_gz_sim/models/2qr/: model.config  model.sdf
src/aerobot_gz_sim/models/2qr_without_car/: model.sdf
src/aerobot_gz_sim/worlds/: first_scene_world_v1_ap.sdf  first_scene_world_v2_ap.sdf  second_scene_world_v1.2_ap.sdf  second_scene_world_v1_ap.sdf  second_scene_world_v2.2_ap.sdf  second_scene_world_v2_ap.sdf  third_scene_world_v1_ap.sdf  third_scene_world_v2_ap.sdf
src/car_with_qr/: CMakeLists.txt  package.xml
src/car_with_qr/src/: car_drive.cpp
src/gz_timer/: CMakeLists.txt  package.xml
src/gz_timer/src/: gz_timer_sim.cpp
(+190 files in other folders)
